adding sections for chapters

--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -22,6 +22,25 @@ It also contains the following material:
 - summaries and links to existing draft chapters of the thesis
 - writing on the potential future directions and existing limitations of this study
 
+## Summary of associated activity since the last review
+
+### Dissemination of results via presentations and showcase work
+
+-  **Presentation at Manchester Games Network Conference 2023:** a presentation focusing in the use of game design patterns (explored later in this report).
+-  **Presentation at Manchester Met PGR Conference 2023:** a presentation giving an overview of the study and context.  
+-  **Partnership showcase with Manchester Science and Industry museam and Manchester Games Network and RISE:** three days of game making and coordinating students in a partnership.  
+
+
+This early dissemination of results prompted a deeper analysis of my existing data in terms of the overarching themes and the 3M pedagogical model emerged from this process.
+
+### Book chapters in print
+
+Three book chapters have been published / sent for print.
+
+- An extract of the chapter  _Game Making and Coding Fluency in a Primary Computing Context_, is in
+DETAILS OF THE COLLECTION
+
+- Two chapters were for an audience of teachers as part of a proposed collection _Inclusive practice and theory in computing education, Alternative perspectives on curriculum and classrooms_. One chapter analysed abstract and concrete approaches to computing education. The other covered design and project approaches in this subject. I will be able to include material from this writing into my introductory thesis chapters.
 
 
 ## Book Chapter -  Game Making and Coding Fluency in a Primary Computing Context
@@ -49,41 +68,13 @@ While there has been a large body of research on the value and practice of game 
 
 In this chapter, I explore the potential of digital game making as an inclusive way of developing coding concepts and coding fluency in the later stages of Primary Education. This chapter begins with a short summary of the United Kingdom (UK) context of coding and inclusion. This is followed by a section on game making as an inclusive, project-based teaching approach. I then describe two game making tools used in my study before outlining the process of the development of a learning design in partnership with participants. I end with an overview of what I provisionally call the 3M game making learning design and offer links to the resulting resources suitable for learners and fellow practitioners.
 
-<!-- This chapter contains (CHANGE THIS LATER TO PROSE not bullet points):
-- a summary of UK context of coding and inclusion
-- a brief summary of research relating to game making as an educational practice
-- a section on alignment of PBL, UDL and game making
-- two game making tools used in my Study
-- research vignette  - evolution of research design
-- Overview of The 3M Game Making Learning Design
-- Summary of Supporting Resources -->
-
-<!-- Later I outline tactics to resolve common tensions when undertaking educational game-making projects. I do this using an extended case study from my own research in the form of a pedagogical design called the 3M game making model.
-
-Through this model I explore the value of game making to support the development of coding using a project based approach. Specifically the value of design patterns and authenticity of project work are described. In particular, I outline the value of resources and activities to support learners with project navigation and motivation. -->
-
-<!-- In this chapter I outline a case study and model for game making designed with to align with project-based and inclusive pedagogies.
-
-I identify and describe design tensions emerging from the exploratory stages of my PhD study on families making games together.
-
-I share a learning design incorporate that seeks to help resolve and explore these tensions in detail. While I share initial findings in response, the research is still in progress. As such, this early reporting of results seeks to put into focus, and explore in details tensions in the particular context of family making and in primary school classroom, use of game making as a creative medium and the affordances and limits of game making particular tools. -->
 
 ## Context
-<!--
-INTRO ON CHALLENGE OF TEACHING CODING
-"The challenge to create tools and pedagogies to allow younger learners to start to engage with coding as a creative design practice is on-going ... "
- -->
 
-<!-- On a global scale there have been many developments in software and programs researching game making.
-
-- Constructionist researchers and programs.
-- Value of Scratch for game making and associated research.
--  middle ground of commercial games which have a creative element to it. -->
-
-REMOVED FOR BREVITY
 
 ## Game Making, Project Based Learning and Inclusion
-REMOVED FOR BREVITY
+
+
 **Family Game Experience as an inclusive Fund of Knowledge:**
 REMOVED FOR BREVITY
 
@@ -149,28 +140,10 @@ BOX ENDS
 
 In addition to outlines of game patterns, printouts or on-line documents to support learners to implement the code needed are provided. While on-line documents allow learners to copy and paste code thus avoid many syntax errors, printed or incomplete code examples provide a greater level of challenge. Supporting resources help resolve tensions around learners getting stuck and needing a lot of facilitator help. These resources can help teachers deliver game making in a classroom context. Educators can alter resources to vary how much detail is provided in supporting documents to suit the challenge level for students. I work with young coders and so I normally provide significant coding scaffolding. Once learners have built familiarity with code structures, processes, and the coding environment then I provide less complete code examples and thus reduce the scaffolding.
 
- <!--
- As mentioned the break down involves creating help resources to support a menu of game design patterns. If teachers want to take on doing this work themselves then the amount work is significant but manageable especially if collaboration with other educators is involved. I found the process of creating the resources invaluable in helping students solve their coding problems. -->
 
-<!--
-![patterns as missions ](./Pictures/missions_full.png)
-![patterns as missions ]({{ site.baseurl }}/Pictures/missions_full.png)
-_Diagram of Possible Missions on a Web Page Menu_
-CHANGE THIS TO MORE TEXT ORIENTED BREAK DOWN. -->
-
-<!-- I don't propose that people fall neatly into any one category. Instead these categories are mostly aimed at educators to help them plan their game making sessions. After some of my own sessions I wondered if some of the frustration and confusion surrounding learners on-going participation was due to the diversity of the different approaches. -->
-
-<!-- I noticed that when facilitating game making I would sometimes be frustrated learners messing around and creating tricky or impossible games. I would try to bring learners back to a more structured games making approach. However during research I reviewed the recordings and young people were often exploring the code, making many changes, and inviting others to play their game for feedback.  -->
 
 ### Maps
 
-<!-- ![map of learning design]({{site.github.url}}/_posts/Pictures/maps_2000.png) -->
-
-<!-- ![learning islands](./Pictures/maps_2000.png)
-![learning islands]({{ site.baseurl }}/Pictures/maps_2000.png)
-_Missions as Islands_ -->
-<!-- Working with learner stress and confusion was something that I struggled with for some time. One source of frustration started from giving learners clear pathway. The freedom to choose what game to create was liberating but then conversations about what was possible with the time and technical ability we had were hard and we did lose some families in this process. Starting with a template and creating resources to help common patterns helped resolve this tension. However having this menu of choices also created another issue. Having them all mapped out meant. -->
-<!-- Is this better in Missions?   -->
 
 **Learning Dimensions Map:** In learning environments where there is a lot of choice assessing learners via observation is beneficial. Rather than deciding what you want to teach and testing students on that area, you can map the learning happening in an authentic activity. When researching hands-on tinkering in Science museums Bevan and Petrich [-@petrich_it_2013] worked with educators to examine video footage of families interacting with exhibits to make a structured list of the learning they observed. The resulting map of learning dimensions included underlying science concepts but also contained more general skills and helping behaviours involved in exploratory learning processes. Another chapter in this collection identified concept maps and observation as methods for teachers and researchers to identify key learning suited to particular computing projects. One of the outcomes of my research was to extract some of the concepts and practices that learners engaged with when making games from hours of recorded material. While some are common to existing Computational Thinking frameworks others, including systems thinking concepts, are more unique to game making. Table 1.1. shows my resulting map of learning dimensions for the 3M game making model.
 
@@ -188,13 +161,6 @@ _Missions as Islands_ -->
 Table 1.1. Learning Dimensions of the 3M Game Making Model
 
 This process of mapping such frameworks may be overly time-consuming for many full-time teachers. However, teachers may also use and adapt existing maps and frameworks based on their own classroom experience to help their observation of students. Because these frameworks can also help students to navigate their own learning journey the effort serves a double purpose.
-
-<!--
-While this is an informal way of usipeng maps the are other approaches that are more formal including one called a concept map which is a visual representation of target specialised knowledge. There is a section on concept maps as part of the teach computing website here. https://blog.teachcomputing.org/how-we-teach-computing/. -->
-<!-- ![Learning Dimensions](Pictures/learning_dimensions.jpg)
-![Learning Dimensions]({{ site.baseurl }}/_posts/Pictures/learning_dimensions.jpg)
-_Map of Learning Dimensions of the 3M Game Making Approach_
- -->
 
 **Physical Maps of Missions:**
 
@@ -269,30 +235,13 @@ One of the purposes of sharing my resources freely is to invite collaboration wi
 
 ## Commentary on book chapter extract and its relationship to teh ongoing thesis
 
+While the book chapter above details two code authoring environments, the thesis concentrates on one of them (phaser and glitch.com).
 
-The thesis concentrates on the phaser tool.
+This was a difficult decision as while the choice of
 
 
-## Summary of Wider Activity since RD2
 
-My RD2 was in December 2019. Due to COVID studies stopped in summer 2020 and restarted in June 2022. This section is a brief summary of some of the activities that I have managed to undertake in this time frame.
 
-### Dissemination of Results via Presentations
-
-- **Online Mozilla Conference 2021:** I presented an overview of the key features of the game making learning model that has emerged from my PhD research during an online conference organised by Mozilla (pioneers of in informal digital learning and associated tools [@sefton-green_mapping_2013]).
--  **Online Presentation at Manchester Games Network:** a 90 minute presentation and interactive session.
-- **Informal Participation on Playful Learning conference 2022:** The use of games consoles loaded with games created by participants is an engaging way to talk about my research.
--  **Presentation at Manchester Games Network Conference 2023:** a presentation focusing in the use of game design patterns (explored later in this report).
--  **Presentation at Manchester Met PGR Conference 2023:** a presentation giving an overview of the study and context.  
-
-This early dissemination of results prompted a deeper analysis of my existing data in terms of the overarching themes and the 3M pedagogical model emerged from this process.
-
-### Other book chapters in print
-
-I have completed three book chapters this year of which pre-publisher versions are available online
-. Two chapters were for an audience of teachers as part of a proposed collection _Inclusive practice and theory in computing education, Alternative perspectives on curriculum and classrooms_. One chapter analysed abstract and concrete approaches to computing education. The other covered design and project approaches in this subject. I will be able to include material from this writing into my introductory thesis chapters.
-
-I completed a draft chapter for an internation collection on teaching coding. In this chapter named _Game Making and Coding Fluency in a Primary Computing Context_, I outlined the 3M game making model and described the accompanying resources for learners that I have created during the course of my research. I also described the implementation of game design patterns as missions by learners as a core unit of activity of the model. This chapter is the most up-to-date and extensive overview of my research design and findings to date and is available online linked as an appendix.
 
 ## On methodology and data analysis
 
@@ -333,6 +282,15 @@ The process of a more systematic triangulation of that data with video data anal
 
 
 
+## Commentary on chapter four - Emerging Learning Designs
+
+test
+## Commentary on chapter five - Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
+Testing
+
+## Commentary on chapter six - The Use of Gameplay Design Patterns "It’s like a project in itself, really"
+
+tested
 
 ## Concluding observations
 
