adding one on methods

--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -240,10 +240,7 @@ While the book chapter above details two code authoring environments, the thesis
 This was a difficult decision as while the choice of
 
 
-
-
-
-## On methodology and data analysis
+## Commentary on chapter three - Methods and Data
 
 ### Evolution of methodology
 
