agency rqs and commmentary

--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -239,14 +239,27 @@ While the book chapter above details two code authoring environments, the thesis
 
 This was a difficult decision as while the choice of
 
+The book chapter was based on observations of the pedagogy that emerged with much less of a focus on more detailed analysis of data. As such the focus is on tips for practitioners. It is useful at this point to outline the updated research questions which emerged from a closer analysis of the the collected data.  
 
-## Commentary on chapter three - Methods and Data
+**Research Questions - June 2023**
+
+1. What pedagogical tools and processes are available to support novices to overcome barriers to game coding and design?
+<!-- - What pedagogical factors are significant to support novices learning coding, particularly in game making contexts? -->
+2. How can learners build agency in an evolving community of game makers?
+3. How can game design patterns support the development of coding practices with novices?
+
+These questions are more focused than previous interaions and contain an element of agency which emerges from a greater focus of the potential value of the learning design and closer readings of emerging themes in activity theory which have inspired me and to which I feel this research can contribute. 
+
+
+## Commentary on key chapters of the thesis
+
+I will outline the main premise of three main chapters that outline the key findings of this study. In addition the following section gives an overview of the data analysis methods underlying methodology utilised.
+
+### Commentary on chapter three - Methods and Data
 
 ### Evolution of methodology
 
-The foundation of this research is a design-based research approach which is underlined by Activity Theory (AT) as a conceptual framework. At RD2 stage analysis of results slated to use Engeström's -@engestrom_activity_2006 detailed framework of third generation Activity Theory (3GAT).
-
-Presenting emerging results within this extensive framework are complicated if trying to follow the prescriptive nature of 3GAT as a formative, developmental framework [@bakhurst_reflections_2009; @spinuzzi_trying_2020]. However there the use of broader interpretations of Activity theory as an underlying conceptual framework in used together with design-based research methodology and the elements of 3GAT to explore tensions and resolutions in emerging activity.
+The foundation of this research is a design-based research approach which is underlined by Activity Theory (AT) as a conceptual framework. Presenting emerging results within this extensive framework are complicated if trying to follow the prescriptive nature of 3GAT as a formative, developmental framework [@bakhurst_reflections_2009; @spinuzzi_trying_2020]. However there the use of broader interpretations of Activity theory as an underlying conceptual framework in used together with design-based research methodology and the elements of 3GAT to explore tensions and resolutions in emerging activity.
 
 In addition during data analysis I used Rogoff's [-@rogoff_observing_1995-1] three planes / foci of personal, social and community to help focus and organise observational notes. The model which problematises the dichotomy of learner led, teacher led approaches [@mascolo_beyond_2009] suited the space between formal and informal learning that this community based model of game making occupies.
 
@@ -254,38 +267,29 @@ In addition during data analysis I used Rogoff's [-@rogoff_observing_1995-1] thr
 
 - Tidy up the work on Sannino etc
 
-
-### Data Analysis
+#### Indentifying tensions and motivations
 
 CHAT relies on analysis of systemic tensions in activity and culture [@barab_using_2002]. Initial results relied on data analysis of my journal entries, informal interactions and formal interviews with participants, selection of key vignettes from video recordings and identification of the key features of the supporting resources and learning strategies that I created in response to emerging tensions. While the process of analysing tensions is still underway, I have included a link to emerging observations and responses in the appendix [^5].
 
-#### Coding of Video Data in Nvivo
+#### Coding and analysis of video data
 
-When coding I started with some preset codes from the literature for examples Barron and colleagues' on parent roles when helping digital projects [-@barron_parents_2009]. As coding progressed, I have modified and extended these roles into codes to better match my recorded data. I have also drawn on design stages, modes of interaction do guide coding. The coding structure is still being revised as I continue to analyse data. I am exploring alternatives to coding video data in the Nvivo software package due to its limitations in playing and reviewing video data.
+To allow for a greater depth of analysis I opted to anaylse key game making sessions in greater detail rather than all ten in a more summative fashion.  
 
-#### Challenges and Opportunities of Detailed Data Analysis
+In the last review I outlined that I am exploring alternatives to coding video data in the Nvivo software package due to its limitations in playing and reviewing video data and the large amount of video data I am dealing with . I have adopted a process for coding and describing section
 
-The quality of the video data collected was high and, put simply, there is a lot of it. This study presents significant challenges in regards to analysis of data, some foreseen and some unexpected. The challenges include;
+When coding I started with some preset codes from the literature for examples Barron and colleagues' on parent roles when helping digital projects [-@barron_parents_2009]. As coding progressed, I have modified and extended these roles into codes to better match my recorded data.
 
-- The length of time required to analyse data collected from multiple sessions on each participants computers is even longer than anticipated.
-- Curating and processing 360 data from significantly after the date presents issues of incomplete file transfers / other data integrity challenges.
-- The breadth of possible avenues of study provided by the data make deeper coding and analysis impossible before an additional focusing of aims
+I initially drew on on design stages, modes of interaction do guide coding. The coding structure is still being revised as I continue to analyse data.
 
-However, the depth of data gathered provides opportunities. The data from 360 camera allows clarification and gesture analysis to be added to a transcription and description of what was happening on the laptop screens of the pair of participants in questions. It is possible to process video data in a way which allows a near complete picture of the individual, small group and community actions and interactions in a potential novel way. I will aim to demonstrate this technique and the potential richness of this technique of data processing and reviewing in my presentation for the annual review.
+### Commentary on chapter four - Emerging Learning Designs
 
-#### Other Thoughts on Data Analysis
-
-The process of a more systematic triangulation of that data with video data analysis is underway. The material gathered proved to be very rich in terms of both social interactions between team making participants and community interactions happening on a wider scale. I am looking at restricting detailed analysis of data to that gathered in 2019 as these sessions of data gathering are very rich in terms of social and community design activity. These interpersonal and cultural aspects stand out to me as potentially the most fruitful due to lack of similar, social approaches in the context of game making for this age range. It was this observation that has prompted the examination of Rogoff's [-@rogoff_observing_1995-1] three foci model described above.
+The process of
 
 
-
-## Commentary on chapter four - Emerging Learning Designs
-
-test
-## Commentary on chapter five - Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
+### Commentary on chapter five - Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
 Testing
 
-## Commentary on chapter six - The Use of Gameplay Design Patterns "It’s like a project in itself, really"
+### Commentary on chapter six - The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
 tested
 
