--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -248,7 +248,7 @@ The book chapter was based on observations of the pedagogy that emerged with muc
 2. How can learners build agency in an evolving community of game makers?
 3. How can game design patterns support the development of coding practices with novices?
 
-These questions are more focused than previous interaions and contain an element of agency which emerges from a greater focus of the potential value of the learning design and closer readings of emerging themes in activity theory which have inspired me and to which I feel this research can contribute. 
+These questions are more focused than previous interaions and contain an element of agency which emerges from a greater focus of the potential value of the learning design and closer readings of emerging themes in activity theory which have inspired me and to which I feel this research can contribute.
 
 
 ## Commentary on key chapters of the thesis
@@ -283,15 +283,43 @@ I initially drew on on design stages, modes of interaction do guide coding. The 
 
 ### Commentary on chapter four - Emerging Learning Designs
 
-The process of
+This chapter draws on review of literature and from four interviews with peer practitioners to exposes barriers to undertaking activity  this domain
+
+The middle section gives an overview of the evolution of the learning design which
+
+- draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
+
+Due to the novel nature of the learning design the detailed outline of the evolution and specifics therein are also important to situate findings in the following two chapters.
+
+**Methodology for exposing tensions**
+
+Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design.
+
+The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency.
+
+In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools.
 
 
-### Commentary on chapter five - Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
-Testing
+
+### Overview of chapter five - Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
+
+
+This chapter is concerned with examining the impact on participants of the learning design explored in the last chapter.
+
+- The first section examines the impact of a process drama with an aim to establish and nurture community practice. It highlights the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame.
+- the use of core tools in the initial learning design
+- community behaviour and design processes
+
+In the discussion section, the chapter builds on material explored in the literature to explore:
+
+- the development of agency in this learning design, Particular attention is given to processes which support learners to develop agency in the game making process.
+- design concepts to support novices learning coding in game making contexts.
+
 
 ### Commentary on chapter six - The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
-tested
+Table of summary of use of GDPs.
+https://docs.google.com/document/d/1mbnV2pjT_7gq4Mcss8gQJ78avHktnA1P3HCJTkiJefk/edit
 
 ## Concluding observations
 
