--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -72,32 +72,27 @@ title: 4. Emerging Learning Designs
 
 ## Chapter Introduction  
 
-This chapter addresses the barriers to game coding and design through interviews with fellow practitioners in this domain and via exploration of tensions emerging. It is also important to introduce later findings in the following two chapters.
+This chapter
+
+- exposes motivations and barriers to undertaking activity  this domain from interviews with peer practitioners and literature review
+- gives an overview of the evolution of the learning design
+- draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
+
+Due to the novel nature of the learning design the detailed outline of the evolution and specifics therein are also important to situate findings in the following two chapters.
 
 **Key questions / motivations in creating a new learning community**
 
-The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice.
+The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice. One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed.
 
-One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed.
+<!-- **Methodology for exposing tensions**
 
-
-**Methodology for exposing tensions**
-
-<!-- NOTE - Recap last chapter - move most /any context there.  -->
-
-Exposing tensions and participant conflict in activity systems to activity theory and also served to drive the evolution of this learning design.
+Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design.
 
 The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency.
 
-In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools.
+In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools. -->
 
-**Outline of chapter**
 
-Thus, this chapter;
-
-- exposes tensions in this domain from interviews with peer practitioners and literature review
--  charts the evolution of the learning design
-- It draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created.
 
 
 ## Exploring issues and context from practitioner interviews and existing research
