--- a/_posts/thesis_chapters/2023-6-6-Gdps.md
+++ b/_posts/thesis_chapters/2023-6-6-Gdps.md
@@ -66,13 +66,9 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
         agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
 
 
-## Moved from previous sections - to allocate in this chapter
-
-CONCLUDING REMARKS?
-In PBL, UDL and other models - learner choice and building agency is shown to be of value in increasing engagement and ownership over learning. However, building the relevant knowledge to identify, agree on and implement game patterns from scratch takes time and without relevant scaffolding too so long that it negatively impacted motivation.
 
 
-## Introduction to This Writing
+<!-- ## Introduction to This Writing
 
 While this piece of writing contains results, it also contains references to concepts and methodologies which will be included in other chapters in the final thesis. Other emerging chapters are online at - https://mickfuzz.github.io/phd4/thesis_chapters.html
 
@@ -86,7 +82,7 @@ To help the reader understand the data in this chapter the following notes on in
 - A narrow data samples has been used for this study. This prioritises a greater depth of analysis on interactions over generalisation. This is justified in a section on data validity in methodology chapter.  
 - Results chapters use Rogoff's 3 planes of analysis (Cultural, Interpersonal and Personal) which aligns well with AT (Methodology)
 - The concepts of resolving tensions within activity from Activity Theory are used to explore the evolution of the design of activities and resources. (Design results)
-- The working definition of game design patterns (GDPs) is explored in the literature review and enhanced in the design chapter is augmented with analysis of specific examples of their use by participants in practice.
+- The working definition of game design patterns (GDPs) is explored in the literature review and enhanced in the design chapter is augmented with analysis of specific examples of their use by participants in practice. -->
 
 
 <!-- - A quick summary of how parts of the design address three planes [is here](https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/edit?usp=sharing) -->
@@ -98,13 +94,12 @@ To help the reader understand the data in this chapter the following notes on in
 The purpose of this chapter is to explore how the data gathered informs thinking on two research questions of this study.  
 
 - How can game design patterns support the development of coding practices by novices?
-- **New question** - How can learners build agency in an evolving community of game makers?
-- How can the experience of fostering community focused digital game making practices inform wider practice in this area? (begun here but mostly in next / discussion chapter)
+- How can learners build agency in an evolving community of game makers?
+
 
 In the last chapter we explored inclusive pedagogical methods that helped participants become part of an emerging community of game makers. This chapter analyses a sub-activity system to the creation of the whole game, namely the implementation of individual game design patterns (GDPs).
 
 ### On GDP as unit of analyis
-
 
 The implementation of GDPs as a unit of analysis for the researcher also has the following utility / validity;
 
@@ -114,7 +109,7 @@ The implementation of GDPs as a unit of analysis for the researcher also has the
 - Each GDP can be seen as a project given an interpretation of project as the concrete implementation of a goal
 - That concreteness / implementation is particularly valid given the regular play-testing of creations often after each GDP is added in a peer environment.
 
-This sentiment is echoed by something I found in the video data. As one parent Fi expressed when looking at the documentation for implementing one of the GDPs. "It’s like a project in itself really"
+This sentiment is echoed by something I found in the video data. As one parent expressed when looking at the documentation for implementing one of the GDPs. "It’s like a project in itself really"
 
 
 Analysing the implementation of GDPs as a unit of activity allows the use of useful concepts to explore the specifics of participant behaviour. In the methodology and design chapter I explored the concept of resolving tensions involved in tool use and interaction with the learning design. In this section I briefly explore the utility of the concepts of activity, actions and operations when applied to implementing GDPs [@kuutti_activity_1995].
@@ -125,7 +120,13 @@ Analysing the implementation of GDPs as a unit of activity allows the use of use
 
 ### Chapter outline
 
-In the following sections, I draw on such detailed observations of participants in practice to outline how GDPs are used by participants. This chapter begins with a Vignette of parent child interaction in game making process. The vignette is used to introduce an overview of interactions of that pair generated from analysis of video data. The chapter then focuses on the use of game design patterns by participants in these interactions and then in reference to  cultural, interpersonal and personal planes of activity. Finally a discussion section explores implications and observations from these findings in relation to existing research and concepts.
+In the following sections, I draw on such detailed observations of participants in practice to outline how GDPs are used by participants.
+
+This chapter begins with a Vignette of parent child interaction in game making process. The vignette is used to introduce an overview of interactions of that pair generated from analysis of video data.
+
+The chapter then focuses on the use of game design patterns by participants in these interactions. A summary of these is available as a table.
+
+Finally a discussion section explores implications and observations from these findings in relation to existing research and concepts.
 
 <!-- In that community-focused analysis, the unit of activity/ analysis was the creation by individuals learners or pairs of an engaging game with an additional goal of exploring an environmental concept.  The implementation of GDPs as a unit of activity allows for a more detailed and granular exploration of the many actions and operations that comprise each pattern.  -->
 
